<resources>
    <string name="app_name">baydala-FuelTrack</string>
    <string name="action_settings">Settings</string>
    <string name="button_add_entry">Add Entry</string>
    <string name="button_complete_entry">Done</string>

    <string name="title_activity_add_entry">Add A New Entry</string>
    <string name="enter_day">Enter Date (yyyy-mm-dd)</string>
    <string name="enter_station">Enter Station</string>
    <string name="enter_odometer">Enter Odometer Reading (x.x km)</string>
    <string name="enter_fuel_grade">Enter Fuel Grade</string>
    <string name="enter_fuel_amount">Enter Fuel Amount (L)</string>
    <string name="enter_unit_cost">Enter Unit Cost (x.x Cents/L)</string>

    <string name="fuel_cost">Fuel Cost</string>
    <string name="previous_entries">PREVIOUS ENTRIES</string>
    <string name="tap_to_view">Tap to View Details and Edit</string>

    <string name="title_activity_view_entry">View Previous Entries</string>
    <string name="day_title">Date</string>
    <string name="station_title">Station</string>
    <string name="odometer_title">Odometer Reading (km)</string>
    <string name="fuel_grade_title">Fuel Grade</string>
    <string name="fuel_amount_title">Fuel Amount (L)</string>
    <string name="unit_cost_title">Unit Cost</string>

    <string name="done_button">Done</string>
    <string name="edit_button">Edit</string>
    <string name="cancel_button">Cancel</string>

    <string name="title_activity_edit_entry">Edit Entry</string>
    <string name="button_cancel_entry">Cancel</string>
    <string name="fuel_cost_title">Total Fuel Cost</string>

    <string name="empty_field">Something must be entered in every field</string>



</resources>
