<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="martina.ualberta.baydala_fueltrack.AddEntryActivity"
    android:weightSum="1" >


    <EditText android:id="@+id/enter_day"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_day"
        android:textAlignment="center" />

    <EditText android:id="@+id/enter_station"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_station"
        android:textAlignment="center" />

    <EditText android:id="@+id/enter_odometer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_odometer"
        android:textAlignment="center" />

    <EditText android:id="@+id/enter_fuel_grade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_fuel_grade"
        android:textAlignment="center" />

    <EditText android:id="@+id/enter_fuel_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_fuel_amount"
        android:textAlignment="center" />

    <EditText android:id="@+id/enter_unit_cost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_unit_cost"
        android:textAlignment="center" />

    <Button android:id="@+id/done"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_complete_entry"
        android:onClick="completeEntry" />


</LinearLayout>
