<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="martina.ualberta.baydala_fueltrack.ViewEntryActivity"
    tools:showIn="@layout/activity_view_entry">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/done_view_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="doneButtonClicked"
            android:text="@string/done_button"
            />

        <Button
            android:id="@+id/edit_view_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="editButtonClicked"
            android:text="@string/edit_button"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/day_title"
            android:layout_weight="1"
            android:textSize="15sp"
            android:textAlignment="viewEnd"
            android:textColor="#000000"
            android:gravity="center_vertical"
            android:textStyle="bold"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"/>

        <TextView android:id="@+id/view_day"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:textColor="#000000"
            android:textSize="15sp"
            android:layout_marginStart="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/station_title"
            android:layout_weight="1"
            android:textSize="15sp"
            android:textAlignment="viewEnd"
            android:textColor="#000000"
            android:gravity="center_vertical"
            android:textStyle="bold"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"/>

        <TextView android:id="@+id/view_station"
                  android:layout_width="0dp"
                  android:layout_height="match_parent"
                  android:layout_weight="1"
                  android:gravity="center_vertical"
                  android:textColor="#000000"
                  android:textSize="15sp"
                  android:layout_marginStart="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/odometer_title"
            android:layout_weight="1"
            android:textSize="15sp"
            android:textAlignment="viewEnd"
            android:textColor="#000000"
            android:gravity="center_vertical"
            android:textStyle="bold"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"/>

        <TextView android:id="@+id/view_odometer"
                  android:layout_width="0dp"
                  android:layout_height="match_parent"
                  android:layout_weight="1"
                  android:gravity="center_vertical"
                  android:textColor="#000000"
                  android:textSize="15sp"
                  android:layout_marginStart="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/fuel_grade_title"
            android:layout_weight="1"
            android:textSize="15sp"
            android:textAlignment="viewEnd"
            android:textColor="#000000"
            android:gravity="center_vertical"
            android:textStyle="bold"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"/>

        <TextView android:id="@+id/view_fuel_grade"
                  android:layout_width="0dp"
                  android:layout_height="match_parent"
                  android:layout_weight="1"
                  android:gravity="center_vertical"
                  android:textColor="#000000"
                  android:textSize="15sp"
                  android:layout_marginStart="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/fuel_amount_title"
            android:layout_weight="1"
            android:textSize="15sp"
            android:textAlignment="viewEnd"
            android:textColor="#000000"
            android:gravity="center_vertical"
            android:textStyle="bold"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"/>

        <TextView android:id="@+id/view_fuel_amount"
                  android:layout_width="0dp"
                  android:layout_height="match_parent"
                  android:layout_weight="1"
                  android:gravity="center_vertical"
                  android:textColor="#000000"
                  android:textSize="15sp"
                  android:layout_marginStart="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/unit_cost_title"
            android:layout_weight="1"
            android:textSize="15sp"
            android:textAlignment="viewEnd"
            android:textColor="#000000"
            android:gravity="center_vertical"
            android:textStyle="bold"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"/>

        <TextView android:id="@+id/view_unit_cost"
                  android:layout_width="0dp"
                  android:layout_height="match_parent"
                  android:layout_weight="1"
                  android:gravity="center_vertical"
                  android:textColor="#000000"
                  android:textSize="15sp"
                  android:layout_marginStart="10dp"/>
    </LinearLayout>



</LinearLayout>
